<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_users">

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.githubapiv3.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_navigation_users_to_repositories"
            app:destination="@id/navigation_repository"
            app:popUpTo="@id/navigation_users" />
    </fragment>

    <fragment
        android:id="@+id/navigation_webview"
        android:name="com.example.githubapiv3.ui.repository_webview.RepositoryWebViewFragment"
        android:label="@string/title_repository_webview"
        tools:layout="@layout/fragment_repository_webview" >
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_repository"
        android:name="com.example.githubapiv3.ui.user_repository.UserRepositoryFragment"
        android:label="@string/title_repository"
        tools:layout="@layout/fragment_user_repository">
        <action
            android:id="@+id/action_navigation_repositories_to_repository"
            app:destination="@id/navigation_webview"
            app:popUpTo="@id/navigation_repository" />
        <argument
            android:name="user"
            app:argType="com.example.githubapiv3.domain.models.User" />
    </fragment>
</navigation>